# VISAR_proc

./: HPLF_outputs.py  HPLF_streaks.py  HPLF_visar.py  README.md  Velocity_analysis.py  gnu_parser.py  pyproject.toml
notebooks/: HPLF_example.ipynb
notebooks/HPLF_data/RAW_DATA/run_0205_streak_ref_2024_07_16_17_33_07/: blc15548_run_0205_streak_ref_2024_07_16_17_33_07.h5
notebooks/HPLF_data/RAW_DATA/run_0205_streak_ref_2024_07_16_17_33_07/run_0205_streak_ref_2024_07_16_17_33_07_run_0205_streak_ref_2024_07_16_17_33_07/streak/: sop.tif  visar1.tif  visar2.tif
notebooks/HPLF_data/RAW_DATA/run_0206_laser_only_2024_07_16_17_35_30/: blc15548_run_0206_laser_only_2024_07_16_17_35_30.h5
notebooks/HPLF_data/RAW_DATA/run_0206_laser_only_2024_07_16_17_35_30/run_0206_laser_only_2024_07_16_17_35_30_run_0206_laser_only_2024_07_16_17_35_30/streak/: sop.tif  visar1.tif  visar2.tif
src/: HED_outputs.py  HPLF_outputs.py  HPLF_streaks.py  HPLF_visar.py  Velocity_analysis.py  gnu_parser.py
src/visar_proc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
